neaten asset creation

--- a/_posts/thesis_chapters/2024-8-5-Design.md
+++ b/_posts/thesis_chapters/2024-8-5-Design.md
@@ -331,6 +331,8 @@ Descriptions of other under-developed features inviting improvement follow inclu
 
 #### Level design and prototyping
 
+<!-- The possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure. -->
+
 **The use of a graphical grid structure to edit level design helped balance concerns of accessibility with the use of authentic code language.**
 
 Platform games often conform to certain patterns in terms of the elements involved commonly including: a player that you control to movement of; platforms to be jumped on; hazards to be avoided; and rewards to be collected.
@@ -363,6 +365,13 @@ is explored via a vignette in appendix 4.x where child participant Toby designs 
 
 #### Use of game assets
 
+There has been extensive research supporting the motivational value of the ability for young people to bring their interests into multimedia creations via choice of assets and narratives [@kajamaa_digital_2018; @resnick2014give; @peppler_supergoo_2007]. In line with these findings, I observed a palpable a sense of achievement when participants succeeded in seeing and hearing their creations in their game after making the final changes in code. For some, the sense of a achievement appeared magnified by difficulty caused by the unfamiliar environment and processes.
+EVIDENCE?
+
+This aligns with educational research of the value of incorporating Funds of Knowledge into technical learning environments [Cole etc].
+
+While the value of this process seems clear from existing research, it presented challenges and design tensions in this learning design.
+
 This section conversation: simple block graphics as a half-baked affordences, the use of pixel art and authoring tool, distributed asset creation approaches  
 
 ##### Simple block graphics
@@ -378,15 +387,25 @@ Figure 4.x - Interface of Piskelapp tool
 
 One of the complications encountered in P1 was the differing sizes of sprites created using different graphical tools. I helped resolve this for participants by matching the size of the block in the grid level design structure described above to the default size of sprites created in Piskel (32 x 32 pixels). This is one example of one of the  technical alignments which addressed and helped resolve practical obstacles that participants experienced.
 
-
-
-NOTE - INTEGRADE DISTRIBUTED ASSET CREATION AND NOT BLACK BOXING EXPORTING ETC AS A DIGITAL LITERACY SKILL.
-
-
-
 #### Distributed approach to asset creation
 
+Tools like Scratch [@payne2019music] adopt a self-contained to audio and graphical asset creation and provide a library of prebuilt assets and tools within the environment thus reducing possibility for errors and complexity caused by the compatibility of file formats, migration and management of external asset files. While the code playground Glitch provided some tools to help manage files, it could not create or edit audio or graphical files, requiring the use of external asset creation tools.
 
+In line with existing research, in P1 I observed participant showing a high motivation to incorporate assets based on their hope interests. Responding to the enthusiasm of participants in asset creation, I had introduced six software tools to participants including tools for pixel art, sound editing, sound creation, In addition I also encouraged collage creation to create a physical background to the game and then scan that to create a digital image. A table of the different tools and processes is included as appendix 4.x  
+
+I was concerned that in P1 the diversity of asset creation tools approaches was over complicated creating an increased burden of learning different software, reducing the shared experience helpful for peer learning and risking distracting time and attention from coding activities. Thus, in P2 I reduced the number of suggested assets creating tools suggesting Piskel and an online audio effects generator (bxfr ?)
+
+Participants would identify the need for an asset in their game. They would then use the separate software to create that asset, and the be supported to save assets to their computer's hard drive in a compatible format. They would then need to upload assets to the code playground environment, discover the text link of the asset, and then insert that link into the main JavaScript game file at the relevant line of code.  
+
+The forced choice to use a distributed toolset rather than black-boxing asset management and migration led to benefits in developing key digital literacy needed for web creation. The strong motivation to see your assets in the game drove participants to building fluency (aligned with Webmaker ethos) as undertaking the full process involved learning a complex chain of these individual actions. Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation.  
+
+<!-- For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel; copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. -->
+
+This tension can be described as a play paradox. WHERE IS THIS FIRST INTRODUCED I was looking to avoid too much time spent in asset creation at the expense of other processes which would develop coding concepts and practices. It also increased the possibility of peer learning as less tools were being used.
+
+ALSO NEEDED TO CHANGE DUE TO THE CHANGE IN GROUP WORK DESCRIBED LATER.
+
+Participants spent a widely different length of time creating these graphics for a variety of reasons. Some took a long time to master the process of using the editing tool while others created images rapidly but would keep redesigning and recreating their game elements. The process of game art creation opportunities seeding narrative and artistic creativity is explored in more detail in chapter five.
 
 
 <!-- _Seeding narrative and art creativity_
@@ -411,33 +430,8 @@ Despite building familiarity with code, at this stage event simple game changes 
  -->
 
 
-
-
-#### Distributed vs. self-contained approaches to asset creation - INTEGRATE IN GRAPHICS SECTION ABOVE
-
-A key element of game creation is the creation and management of graphical and audio assets. Many coding tools for novices provide a library of prebuilt assets and tools within the environment to alter or creation graphical and audio multimedia assets to facilitate and accelerate the creation of games and coding projects. While there are practical limits to the audio and graphical authoring capabilities of tools like Scratch [@payne2019music], such self-contained approached reduce possibility for compounding errors and complexity caused by the compatibility of file formats and migration and management of external asset files.
-
-There has been extensive research supporting the motivational value of the ability for young people to bring their interests into multi-media creations via choice of assets and narratives [@kajamaa_digital_2018; @resnick2014give; @peppler_supergoo_2007]. In line with these findings, I observed a palpable a sense of achievement when participants succeeded in seeing and hearing their creations in their game after making the final changes in code. For some, the sense of a achievement appeared magnified by difficulty caused by the unfamiliar environment and processes.
-EVIDENCE?
-
-THE BENEFITS OF ASSET CREATION AS A WAY TO INCORPORATE FUNDS OF KNOWLEDGE - WHERE IS THIS EXPLORED.
-
-<!-- In Scratch there are tabs which host simplified graphical and audio studios. Design decisions prioritise ease of use and the ability to record audio right into the program.  -->
-
-In P1 I observed participant showing a high motivation to incorporate assets. Responding to the enthusiasm of participants in asset creation, I had introduced six additional software tools to participants including tools for pixel art, sound editing, sound creation. A table of the different tools is included as appendix 4.x  
-
-
-Similar patterns of use emerged. Participants would identify the need for an asset in their game. They would then use the separate software to create that asset, and the be supported to save assets to their computer's hard drive in a compatible format. They would then need to upload assets to the code playground environment, discover the text link of the asset, and then insert that link into the main JavaScript game file at the relevant line of code. Undertaking the full process involved learning a complex chain of these individual actions. Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation. Thus, the distributed nature of the toolset used helped build authentic digital literacy skills.
-
-<!-- For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel; copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. -->
-
-Despite this benefits, I was concerned that in P1 the diversity of asset creation tools approaches was over complicated and risked distracting time and attention from other code-based actions involved in the activity of game making. Thus, in P2 I reduced the number of suggested assets creating tools.  
-
-This tension can be described as a play paradox. WHERE IS THIS FIRST INTRODUCED I was looking to avoid too much time spent in asset creation at the expense of other processes which would develop coding concepts and practices. It also increased the possibility of peer learning as less tools were being used.
-
-ALSO NEEDED TO CHANGE DUE TO THE CHANGE IN GROUP WORK DESCRIBED LATER.
-
-Participants spent a widely different length of time creating these graphics for a variety of reasons. Some took a long time to master the process of using the editing tool while others created images rapidly but would keep redesigning and recreating their game elements. The process of game art creation opportunities seeding narrative and artistic creativity is explored in more detail in chapter five.
+<!-- ADD THIS FUNCTIONALITY OF ASSET AREA TO DESCRIPTIO OF CODE PLAYGROUND
+A key element of game creation is the creation and management of graphical and audio assets.  -->
 
 
 <!-- I began by mirroring social model of learning like CoL and CoP and their propose apprenticeship-based approaches. Specifically, introducing possible code solutions to implement the ideas of participants. However, limits to my time involvement and my technical fluency hindered this process creating stress in myself and frustration and hesitancy on participants to get direct help.
