on mutuality and purpose of design back into discussion

--- a/_posts/thesis_chapters/2024-8-5-Design.md
+++ b/_posts/thesis_chapters/2024-8-5-Design.md
@@ -1115,7 +1115,6 @@ Evidence of the potential of those on the drama process are explored in chapter 
 
 ## Chapter Discussion
 
-NOTE - MOVED A SECTION ON THE EMERGENT DESIGN TO METHODOLOGY
 
 <!-- As an example the quick start activities created by PGCE students were much more directive than I would have proposed. However, the response of participants still engendered a diversity of experience, from these shared beginnings.The implementation of discreet but potentially shared game elements became a shared pattern of activity. In early stages the mutual work to produce resources, techniques and practices to share and evaluate these shared elements became a primary focus of my work, just as the implementation of game elements was the focus of the work of participants. -->
 
@@ -1128,6 +1127,56 @@ Affordances within the domain of HCI research -->
 In summary, this chapter has explored the complexity of the interacting tools and documentation in relation to their authenticity and impact on participant experiences. While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles. However, some barriers involving social and cultural factors suited interventions of other pedagogies. In later chapters I explore the interaction between authenticity and agency in more depth using the emerging pedagogies as an analytical lens.
 
 <!-- Later, chapter six  chapter explores the potential for drama processes to address learner anxiety in this domain. -->
+
+
+### On the emergent and mutual nature of the design and research process (AND link to agency?
+
+As explored in Chapters 3 and 4, the process of this chapter is in line with exploratory research perspectives with an remit to explore emergent tensions come into focus in a particular setting. This allows a subsequent refocusing of research to explore these emerging issues in more depth via iterations.  
+
+The mutuality of the process has also been described. The learning design changed as a result of feedback and concrete additions ans suggestions from young people and their parents, university students and colleagues.
+
+ADD MORE ON DBR AND THE FORMATIVE INTERVENTION as discussion of specifics or challenges
+
+In particular, playtesting as a process and the use of GDPs in varied ways by participants was noticed and more affordences designed to facilitate these asepcts.
+
+Agency in this learning process was present via the input of participants in the changing design of the program.
+These elements are explored in relation the impact on participats in Chapters 6 and 7,
+
+
+
+The process of examining tensions in the design, some which address the aims and objectives of myself and those of participts,  and subsequent attempts to align them via changes to the design aloow of a more focused understaning of the movitation for undertaking game making from my own perspective as well as that of participants.
+
+My role to encourage a learning environment which met the following characteristics via changes in learning design is now explored via a detailed exploration of tnsions arising, changes and motivations.
+
+In summary linking to computational fluency due to following factors
+
+  - particpant voice and choice
+  - peer learning and ongoing sharing of process via product
+  - reduced class instructions
+  - avoiding stuckness
+  - linking to authentic practices and commuities
+
+
+<!-- This approach was more prescriptive than I would have adopted, however it worked well.
+This hesitation overcome by intervention from others can be explored in terms of agency.
+
+The shift of perspective from others and the structure to try it out was very helpful in overcoming conflicts stemming from my pre-conceptions. -->
+
+<!-- The students focused on increasing a scaffolded task which increased the instrumental agency of the participants. -->
+
+
+<!-- There is a connection in this process to foundational theories in the area of HCI and computing education.
+
+  - Affordances
+  - UMC literature
+  - Design patterns
+
+<!-- NOTE - INSERT RESPONSE FROM COMMENTS FROM CATHY. -->
+
+<!-- Affordances within the domain of HCI research
+
+The particular nature of the informal setting with the participation of engaged parents is significant. It holds promise to generate resources and research more generally. This theme is further explored in conclusion of this thesis.  -->
+
 
 ### Summary of barriers and tensions explored in this chapter
 
