--- a/_posts/thesis_chapters/2024-8-5-Design.md
+++ b/_posts/thesis_chapters/2024-8-5-Design.md
@@ -613,11 +613,30 @@ DEVELOP THIS SECTION -->
 
 **- Contradictions associated with project navigation and the use of supporting documentation - interpreted here through the lens of guided participation**
 
-In addition to the description of the tools in the section previously, there is a full description of tools and processes used in the phases included as table in appendix 3.x.
+<!-- In addition to the description of the tools in the section previously, there is a full description of tools and processes used in the phases included as table in appendix 4.x. -->
+
+
+
 
 ### Narrative on the evolution of resources during P2
 
-This section details a conflict where participants, frequently wanted to add new features or changes to their game but were not clear how to implement them. In P1 this caused delays and participant frustration, as although I could work with people directly to help them I had limited time with each participant or pair. The inability for participants progress due to lack of game and coding practices was compounded in early stages by little or no supporting documentation or supporting resources. This section outlines the evolutions and design choices informing the different forms of supporting documentation used to address this conflict.
+The previous section addresses changes to primary tools used to create game code and assets and response to the emerging tensions expereienced by participants in P1.
+
+The advantages of designing primary tools, those used to directly achieve the task rather than secondary tools (e.g  documentation and support processes), is that the guidance is built into the production process in a way which aligns with microworld concepts, thus reducing dependancy on facilitator instruction. Affordances supporting the Modify stage of UMC.
+
+However, these design changes did not aid participants wanted to create new features or code structures in their game. In P1 and early in P2 this caused delays and participant frustration, as although I could work with people directly to help them I had limited time with each participant or pair.
+
+ILLUSTRATE THIS WITH A TRIANGLE
+In the AT illustration we see a tension between community, and objective. In a classroom this may normally be addressed by instruction. (perhaps PRIMM)
+
+However, I was keen to align with the motivational potential of hands-on (learning by experience) approaches to STEM education [@holstermann_hands-activities_2010]m and choice driven approaches to PBL.  
+DOES THE LR EXPLORE THIS TENSION?
+
+Additionally, in P1 I trialled brief class instruction of key coding concepts, that I judged to be relevant to the whole group. Despite trying to limit the time spent on instruction, linking to their experiences and making the process informal, my journal notes reflecting on these interventions were unfavourable.
+
+What is Documentation? dEFINE?
+
+This section outlines the evolutions and design choices informing the different forms of supporting documentation used to address this conflict.
 
 <!-- Before addressing the detail of the learning design it is helpful to contrast both documentation with the use of tools and templates explored previously.   -->
 
@@ -1142,8 +1161,6 @@ In particular, playtesting as a process and the use of GDPs in varied ways by pa
 Agency in this learning process was present via the input of participants in the changing design of the program.
 These elements are explored in relation the impact on participats in Chapters 6 and 7,
 
-
-
 The process of examining tensions in the design, some which address the aims and objectives of myself and those of participts,  and subsequent attempts to align them via changes to the design aloow of a more focused understaning of the movitation for undertaking game making from my own perspective as well as that of participants.
 
 My role to encourage a learning environment which met the following characteristics via changes in learning design is now explored via a detailed exploration of tnsions arising, changes and motivations.
@@ -1484,8 +1501,7 @@ While the use of these skills is not unique to game making and common to pick up
 
 
 
-**MOVE SOMEWHERE?**
-In P1 I trialled brief class instruction of key coding concepts, e.g. logic statements, that I judged to be relevant to the whole group. Despite trying to limit the time spent on instruction, linking to their experiences and making the process informal, my journal notes reflecting on these interventions were unfavourable. Instead, I was keen to align with the motivational potential of hands-on (learning by experience) approaches to STEM education [@holstermann_hands-activities_2010].
+
 
 
 <!-- NOTE - The map could easily be changed to reflect this or other foci of teachers / researchers. -->
