--- a/_posts/thesis_chapters/2024-8-5-Design.md
+++ b/_posts/thesis_chapters/2024-8-5-Design.md
@@ -620,13 +620,15 @@ DEVELOP THIS SECTION -->
 
 ### Narrative on the evolution of resources during P2
 
-The previous section addresses changes to primary tools used to create game code and assets and response to the emerging tensions expereienced by participants in P1.
+The previous section addresses changes to primary tools used to create game code and assets and response to the emerging tensions expereienced by participants in P1. As explored in Chapter 3, understandings of primary and secondary use of tools in the theory of dual stimulation are diverse and inconsistent. In this study I take primary tools to be those used to directly achieve the task and describe other tool use (e.g  documentation and support processes) as secondary tools use or thus comprising dual stimulation.  
 
-The advantages of designing primary tools, those used to directly achieve the task rather than secondary tools (e.g  documentation and support processes), is that the guidance is built into the production process in a way which aligns with microworld concepts, thus reducing dependancy on facilitator instruction. Affordances supporting the Modify stage of UMC.
+The advantages of designing scaffolding within primary tool use rather than secondary tools, is that the guidance is built into the production process in a way which aligns with microworld concepts. This has the potendial to thus reducing dependancy on facilitator instruction. In this design, affordances were chosen to supporting the Modify stage of UMC.
+
+PRIMARY AND SECONDARY USE OF TOOLS DUAL STIMULATION? SOME DISCUSSION MOVED TO CHAPTER 6 ALREADY - MOVE IT BACK HERE?
 
 However, these design changes did not aid participants wanted to create new features or code structures in their game. In P1 and early in P2 this caused delays and participant frustration, as although I could work with people directly to help them I had limited time with each participant or pair.
 
-ILLUSTRATE THIS WITH A TRIANGLE
+ILLUSTRATE THIS WITH A TRIANGLE - see notes 23.8.24
 In the AT illustration we see a tension between community, and objective. In a classroom this may normally be addressed by instruction. (perhaps PRIMM)
 
 However, I was keen to align with the motivational potential of hands-on (learning by experience) approaches to STEM education [@holstermann_hands-activities_2010]m and choice driven approaches to PBL.  
@@ -634,18 +636,11 @@ DOES THE LR EXPLORE THIS TENSION?
 
 Additionally, in P1 I trialled brief class instruction of key coding concepts, that I judged to be relevant to the whole group. Despite trying to limit the time spent on instruction, linking to their experiences and making the process informal, my journal notes reflecting on these interventions were unfavourable.
 
-What is Documentation? dEFINE?
-
 This section outlines the evolutions and design choices informing the different forms of supporting documentation used to address this conflict.
-
-<!-- Before addressing the detail of the learning design it is helpful to contrast both documentation with the use of tools and templates explored previously.   -->
 
 The process of creating documentation which created enough support for users to be able complete coding tasks but also facilitated participants to choose their on path presented significant challenges.
 
-MENTION HERE THE DISTINCTION BETWEEN PRIMARY AND SECONDARY USE OF TOOLS DUAL STIMULATION?
-SOME DISCUSSION MOVED TO CHAPTER 6 ALREADY - MOVE IT BACK HERE?
 
-<!-- I wavered between the use of a technical variable name or one more closely linked to the behaviour in the game. For example, I trialled replacing velocity_x and y with playerMoveSpeed and playerJumpSpeed. I returned to velocity x and y as they are important concepts in physics and wider science, here prioritising the more abstract representation based on experiences of participants not getting overwhelmed or stuck on this use of language, quickly forming habits to alter them. I evaluated that more is gained than lost in this design choice. -->
 
 <!--
 ![](./Pictures/quickstart_phaser_1.png){width=50%} -->
@@ -664,7 +659,7 @@ by Mozilla and the Phaser developers. -->
 
 NOTES: Created by students -
 
-In summer 2028 during I shared the fledging design with computer trainee teacher computing students as part of a subject knowledge enrichment programme. In response to a challenge to improve the design three students created printable word documents which highlighted key affordances of the design.
+After P1 I shared a revised design with computer trainee teacher computing students ( which one? ) as part of a subject knowledge enrichment programme. In response to a challenge to accelerate the design three students created printable word documents which highlighted key affordances of the design.
 
 Narrative of Js cards responding to delivering show case lessons to teacher trainers and in half term activities and more generally sharing the learning design.
 
@@ -678,7 +673,7 @@ To address the limit of one-to-one facilitator support to seed the starting proc
 
 ### Code snippet examples
 
-The use of code snippets, while a promising authentic practice, presented initial challenges. To support a hands-on approach and responding the design choices of participants, I began by creating discreet code examples illustrating the requested elements. The use of code examples or snippets in code playgrounds is a common professional problem solving practice [@yang_stack_2017]. These code examples allow users to see the behaviour in context with the code and output side by side. While code examples exis                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         69+ted on the Phaser website and support forums, in line with other support sites like stack exchange, their utility has limitations including lack of relevant, consistency, being removed from the domain context, and not being structured in a self explanatory way [@treude_understanding_2017]. Thus, while I initially encouraged participants to search within these examples, and authentic documentation and help forums, the resulting confusion and difficulties experienced by participants, prompted me to create other more bespoke documentation.  
+The use of code snippets, while a promising authentic practice, presented initial challenges. To support a hands-on approach and responding the design choices of participants, I began by creating discreet code examples illustrating the requested elements. The use of code examples or snippets in code playgrounds is a common professional problem solving practice [@yang_stack_2017]. These code examples allow users to see the behaviour in context with the code and output side by side. While code examples existed on the Phaser website and support forums, in line with other support sites like stack exchange, their utility has limitations including lack of relevant, consistency, being removed from the domain context, and not being structured in a self explanatory way [@treude_understanding_2017]. Thus, while I initially encouraged participants to search within these examples, and authentic documentation and help forums, the resulting confusion and difficulties experienced by participants, prompted me to create other more bespoke documentation.  
 
 <!-- The competency to overlook the concrete differences in code structure to abstract the principles away and to then apply those principles to the existing structure of their code project seemed too ambitious for this group of novices. -->
 
@@ -794,20 +789,26 @@ An additional rationale for this process was to help reduce potential internal b
 
 <!-- In an early crisis point, one of the children  was not able to implement a desired feature as the 3D experience was beyond the technical possibilities of the code framework. -->
 
-The experience of the family with withdrew outlined in C1  The story is an example of a conflict composed of accumulating tensions which resulting alienation from the group coding environment and associated peer working dynamics. While there were technical aspects to the conflict, these were compounded with more social and cultural barriers that also arose.
+The section at the start of this chapter which outlined the evolution of the learning design from P1 to P2 described a high level of challenge in the face of limited support.  Some of the participants enjoyed this challenge, evidence of which is notable in end of course evalusaion and interviews. Others found the experience more daunting a point illustrated the experience of the family with withdrew citing alienation from the culture of hard core coding that had emerged described at the start of this chapter. This aligns with research addressing barriers concerning identity and technology-driven practices explored in Chapter 2 [@kafai_constructionist_2015-1].
 
-This aligns with research addressing barriers concerning identity and technology-driven practices [@kafai_constructionist_2015-1]. SUMMARISE HOW.
+While changes in the tool and documentation use were initally designed to solve technical problems, they also impacted the culture of the coding group.  
 
-The incident lead me to greater reflection on ongoing measures needed to prevent participant drop out for due to cultural tensions and negative affect towards the working community. These include:
+The story is an example of a conflict composed of accumulating tensions which resulting alienation from the group coding environment and associated peer working dynamics. While there were technical aspects to the conflict, these were compounded with more social and cultural barriers that also arose. In research o 5D Cole describes the emergent of ideocultures in afterschool learning environments as highly dependant on context as well as the initial design itself.
 
+**Framing the area of contradiction / conflict. **
+
+Some attempts of forming ideoculture to avoid alienation were present from P1 start. Including starter games and game playing on entry.
+
+However, the incident and end of P1 evaluation lead me to greater reflection on the area of conflict and tensions involving cultural factors including:
+
+-   A concern for the fragility of learners ongoing` positive affect towards the group game making process to avoid the culture shock experienced by A's family.  
 -   An awareness of the danger that those more confident in coding create more involved code problems that need more facilitator time, potentially making others feel less valued.
--   A concern for the fragility of learners positive affect towards the group game making process and thus the need for initial playful starting and closing activities to be continued beyond initial sessions.
--   The value of a stronger buy-in by participants, ideally a greater commitment to the collective making process balanced with the need for low pressure (avoiding a negative sense of obligation).
+- The value of a peer learning balanced with the need for low pressure (avoiding a negative sense of obligation).
 
-My journal notes detailed an evolution of attempts during P2 and P3 to try to build into the program, a variety of activities which help build the participants sense of their own identities of game makers or more generally digital designers. While chapter six examines these aspects in more depth, the evolution of key design features are summarised in this section, namely nurturing social coding processes and the particular role of playtesting.
+
+Chapter 6 analyses the potential of activities which help build the participants sense of their own identities of game makers in more depth, in particular in relation to dimensions of participant agency. Here I (try to) limit exploration to the evolution of key learning design features addressing this aspect, namely the identification and nurturing of social coding processes and the particular role of playtesting.
 
 ### Social coding processes
-
 
 Some barriers stemming from alienation from participant group working processes were resolved partly by freeing up some patterns of collaboration and interaction and removing others.
 
@@ -950,8 +951,6 @@ Other children come and play the game but only for less than a minute before lea
 The indirect norming behaviours described in appendix 5.Norm.x mirror observations seen in the work of Rogoff and colleagues [@rogoff_cultural_2003] on learning in  community settings.
 
 There is an apparent tension in play here between encouraging individual agency of expression within the game and an evolving community tendency to norm peoples games to be more _playable_, specifically that player movement should conforming to wider expectations.
-
-
 
 What we can draw from the data at this stage is that playtesing provides many leverage points to facilitating learner agency and discuss the limits of designs. IN addition, playtesting is a process that allows participants to demonstrate informed criticality as a player and guide the creations of peers via gameplay feedback.
 
