NEW version of ch 7 and parking oepening sections of the chapter

--- a/_posts/thesis_chapters/2024-8-5-Design.md
+++ b/_posts/thesis_chapters/2024-8-5-Design.md
@@ -785,9 +785,8 @@ An additional rationale for this process was to help reduce potential internal b
 
 <!-- ### Design narrative on conflict due to identity clashes and dysfunctional group work -->
 
-<!-- **Participants stuck / demotivated : scope of ambition to high,  clashes of identity not hard core coders, no on-going playtesting, collaboration groups too big (transition),** -->
+**Participants stuck / demotivated : scope of ambition to high,  clashes of identity not hard core coders, no on-going playtesting, collaboration groups too big (transition),**
 
-<!-- In an early crisis point, one of the children  was not able to implement a desired feature as the 3D experience was beyond the technical possibilities of the code framework. -->
 
 The section at the start of this chapter which outlined the evolution of the learning design from P1 to P2 described a high level of challenge in the face of limited support.  Some of the participants enjoyed this challenge, evidence of which is notable in end of course evalusaion and interviews. Others found the experience more daunting a point illustrated the experience of the family with withdrew citing alienation from the culture of hard core coding that had emerged described at the start of this chapter. This aligns with research addressing barriers concerning identity and technology-driven practices explored in Chapter 2 [@kafai_constructionist_2015-1].
 
