--- a/_posts/thesis_chapters/tocs/2024-8-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-8-5-Design.md_toc.md
@@ -67,6 +67,18 @@
         -   [Outroduction to this part of exploring Drama process and
             playtesting](#outroduction-to-this-part-of-exploring-drama-process-and-playtesting)
     -   [Chapter Discussion](#chapter-discussion)
+    -   [Observations / Discussions on Dimensions of
+        Authenticity](#observations-discussions-on-dimensions-of-authenticity)
+        -   [Observations on Authenticity in project
+            approaches](#observations-on-authenticity-in-project-approaches)
+        -   [The potentially awesome impact of lifting the lid on
+            authentic
+            technologies](#the-potentially-awesome-impact-of-lifting-the-lid-on-authentic-technologies)
+        -   [Different black boxes for different
+            goals](#different-black-boxes-for-different-goals)
+        -   [Increased scaffolding of tools can increase instrumental
+            agency but at what cost? EXPLORE AS TENSION? MOVE TO CH.
+            4?](#increased-scaffolding-of-tools-can-increase-instrumental-agency-but-at-what-cost-explore-as-tension-move-to-ch.-4)
         -   [On the emergent and mutual nature of the design and
             research process (AND link to
             agency?](#on-the-emergent-and-mutual-nature-of-the-design-and-research-process-and-link-to-agency)
